--- a/css/index.css
+++ b/css/index.css
@@ -1,61 +1,68 @@
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
-</style>
+<style>@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
-{
+</style> {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html{
+html {
     font-size: 62.5%;
 }
-img{
+
+img {
     width: 100%;
 }
+
 ul {
     list-style-type: none;
 }
+
 a {
     text-decoration: none;
     color: #FFFBFB;
 }
+
 body {
     width: 100%;
-    min-height:100vh;
+    min-height: 100vh;
     line-height: 1.5;
     background-color: black;
 }
+
 h2 {
     color: #FFFBFB;
     font-size: 20px;
 }
-h3{
-    color: #FFFBFB;
-    font-size: 20px;
-}
-p{
+
+h3 {
     color: #FFFBFB;
     font-size: 20px;
 }
 
-button, 
-input, 
-textarea, 
-select{
+p {
+    color: #FFFBFB;
+    font-size: 20px;
+}
+
+button,
+input,
+textarea,
+select {
     font: inherit;
 }
+
 /*fin reset*/
 
-header{
+header {
     background-color: #a08a8a;
     padding: 1rem;
-    
+
 
 }
+
 .header__nav {
-    display:flex;
+    display: flex;
     align-items: flex-end;
     justify-content: space-between;
     gap: 10px;
@@ -66,6 +73,8 @@ header{
     display: flex;
     max-width: 150px;
     min-width: 120px;
+    animation: rotate-vert-center 3s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+
 }
 
 .header__ul {
@@ -74,16 +83,17 @@ header{
     justify-content: center;
     gap: 2rem;
     flex-wrap: wrap;
-    
+
 }
+
 .header__li {
     color: white;
     font-size: 20px;
 }
 
 .header__li:hover {
-    background-color: white
-} 
+    background-color: rgb(80, 69, 69)
+}
 
 .present {
     background-image: url(img/unsplash_RnCPiXixooY.jpg);
@@ -92,39 +102,42 @@ header{
     align-items: center;
     flex-wrap: wrap;
 }
- 
+
 .titulo {
-    
+
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 700;
     font-size: 64px;
     line-height: 70px;
-    
+
     letter-spacing: -0.5px;
-    
+
     color: #FFFFFF;
+    animation: tracking-in-expand-fwd-top 3s cubic-bezier(.215, .61, .355, 1.000) both;
 }
 
 .titulo2 {
 
-font-family: 'Manrope';
-font-style: normal;
-font-weight: 600;
-font-size: 24px;
-line-height: 36px;
-/* or 150% */
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    /* or 150% */
 
 
-letter-spacing: -0.5px;
+    letter-spacing: -0.5px;
 
-color: #FFFBFB;
+    color: #FFFBFB;
 }
+
 .contactanos1 {
-height: 135px;
-width: 400px;
-left: 96px;
-top: 595px;
+    height: 135px;
+    width: 400px;
+    left: 96px;
+    top: 595px;
+    animation: bounce-top 5s both;
 
 
 
@@ -135,7 +148,8 @@ top: 595px;
 .tarjetasPrincipal {
     background-color: black;
     display: grid;
-    place-items: center ;
+    place-items: center;
+
 }
 
 
@@ -143,16 +157,18 @@ top: 595px;
     background-image: url(img/unsplash_RnCPiXixooY.jpg);
     padding: 40px;
     display: grid;
-    place-items: center ;
+    place-items: center;
 }
+
 .comoVender2 {
     min-width: 200px;
     padding: 10px;
     display: grid;
-    place-items: center ;
+    place-items: center;
 
 
 }
+
 .cV2 {
     max-width: 450px;
     flex-direction: inherit;
@@ -161,42 +177,123 @@ top: 595px;
 .quienesSomos {
     padding: 40px;
     display: grid;
-    place-items: center ;
+    place-items: center;
 
 }
+
 .quienesSomos2 {
     display: inline;
     min-width: 200px;
 }
+
 .formulario {
     justify-content: center;
     padding-left: 100px;
-    background-color:#a08a8a;
+    background-color: #a08a8a;
 }
+
 .footerPlal {
     background-image: url(img/footer.jpg);
 }
+
 .footer {
-    display:inline;
+    display: inline;
     justify-content: space-between;
     align-items: center;
 }
+
 .footerImg {
     max-width: 300px;
 }
+
 .imgwp {
-    max-width:  30px; 
+    max-width: 30px;
     padding: 30px;
 }
 
 @media (min-width:760px) {
     .tarjetasPrincipal {
-     grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
+
     .comoVender {
         grid-template-columns: repeat(2, 1fr);
     }
+
     .quienesSomos {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@keyframes rotate-vert-center {
+    0% {
+        transform: rotateY(0)
+    }
+
+    100% {
+        transform: rotateY(360deg)
+    }
+}
+
+@keyframes tracking-in-expand-fwd-top {
+    0% {
+        letter-spacing: -.5em;
+        transform: translateZ(-700px) translateY(-500px);
+        opacity: 0
+    }
+
+    40% {
+        opacity: .6
+    }
+
+    100% {
+        transform: translateZ(0) translateY(0);
+        opacity: 1
+    }
+}
+
+@keyframes bounce-top {
+    0% {
+        transform: translateY(-45px);
+        animation-timing-function: ease-in;
+        opacity: 1
+    }
+
+    24% {
+        opacity: 1
+    }
+
+    40% {
+        transform: translateY(-24px);
+        animation-timing-function: ease-in
+    }
+
+    65% {
+        transform: translateY(-12px);
+        animation-timing-function: ease-in
+    }
+
+    82% {
+        transform: translateY(-6px);
+        animation-timing-function: ease-in
+    }
+
+    93% {
+        transform: translateY(-4px);
+        animation-timing-function: ease-in
+    }
+
+    25%,
+    55%,
+    75%,
+    87% {
+        transform: translateY(0);
+        animation-timing-function: ease-out
+    }
+
+    100% {
+        transform: translateY(0);
+        animation-timing-function: ease-out;
+        opacity: 1
     }
 }
