--- a/css/index.css
+++ b/css/index.css
@@ -83,9 +83,9 @@ header{
     font-size: 20px;
 }
 
-.header__li:hover {
+/* .header__li:hover {
     background-color: rgb(80, 69, 69)
-} 
+}  */
 
 .present {
     background-image: url(img/unsplash_RnCPiXixooY.jpg);
@@ -136,19 +136,19 @@ animation:bounce-top 5s both;
 
 /* tarjetas*/
 
-.tarjetasPrincipal {
+/* .tarjetasPrincipal {
     background-color: black;
     display: grid;
     place-items: center ;
     
-}
+} */
 
 
 .comoVender {
     background-image: url(img/unsplash_RnCPiXixooY.jpg);
     padding: 40px;
-    display: grid;
-    place-items: center ;
+/*     display: grid;
+    place-items: center ; */
 }
 .comoVender2 {
     min-width: 200px;
