--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3,120 +3,131 @@
 @import '../partials/footer';
 
 .present {
-    background-image: url(img/unsplash_RnCPiXixooY.jpg);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+  background-image: url(img/unsplash_RnCPiXixooY.jpg);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
- 
+
 .titulo {
-    
-    font-family: 'Manrope';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 54px;
-    line-height: 60px;
-    margin-left: 5%;
-    letter-spacing: -0.5px;
-    
-    color: #FFFFFF;
-    animation:tracking-in-expand-fwd-top 3s cubic-bezier(.215,.61,.355,1.000) both;
+
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 54px;
+  line-height: 60px;
+  margin-left: 5%;
+  letter-spacing: -0.5px;
+
+  color: #FFFFFF;
+  animation: tracking-in-expand-fwd-top 3s cubic-bezier(.215, .61, .355, 1.000) both;
 }
 
 .titulo2 {
 
-font-family: 'Manrope';
-font-style: normal;
-font-weight: 600;
-margin-left: 5%;
-font-size: 24px;
-line-height: 36px;
-/* or 150% */
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 600;
+  margin-left: 5%;
+  font-size: 24px;
+  line-height: 36px;
+  /* or 150% */
 
 
-letter-spacing: -0.5px;
+  letter-spacing: -0.5px;
 
-color: #FFFBFB;
+  color: #FFFBFB;
 }
+
 .contactanos1 {
-height: 135px;
-width: 400px;
-left: 96px;
-top: 595px;
-animation:bounce-top 5s both;
+  height: 135px;
+  width: 400px;
+  left: 96px;
+  top: 595px;
+  animation: bounce-top 5s both;
 }
 
 /* tarjetas*/
 
 .tarjetasPrincipal {
-    background-color: black;
-    display: grid;
-    place-items: center ;   
+  background-color: black;
+  display: grid;
+  place-items: center;
 }
+
 .comoVender {
-    background-image: url(img/unsplash_RnCPiXixooY.jpg);
-    padding: 40px;
-    display: grid;
-    place-items: center ;
-    margin-top: 20px;
+  background-image: url(img/unsplash_RnCPiXixooY.jpg);
+  padding: 40px;
+  display: grid;
+  place-items: center;
+  margin-top: 20px;
 }
+
 .comoVender2 {
-    min-width: 200px;
-    padding: 10px;
-    display: grid;
-    place-items: center ;
+  min-width: 200px;
+  padding: 10px;
+  display: grid;
+  place-items: center;
 }
+
 .cV2 {
-    max-width: 450px;
-    flex-direction: inherit;
+  max-width: 450px;
+  flex-direction: inherit;
 }
 
 .quienesSomos {
-    padding: 40px;
-    display: grid;
-    place-items: center ;
+  padding: 40px;
+  display: grid;
+  place-items: center;
 
 }
+
 .quienesSomos2 {
-    display: inline;
-    min-width: 200px;
+  display: inline;
+  min-width: 200px;
 }
+
 .formulario {
-    justify-content: center;
-    padding-left: 100px;
-    background-color:#a08a8a;
+  justify-content: center;
+  padding-left: 100px;
+  background-image: url(img/unsplash_RnCPiXixooY.jpg);
 }
 
 @media (min-width:760px) {
-    .tarjetasPrincipal {
-     grid-template-columns: repeat(3, 1fr);
-    }
-    .comoVender {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .quienesSomos {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .present {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .generic {
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .tarjetasPrincipal {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .comoVender {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .quienesSomos {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .present {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .generic {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 /* ecommerce*/
 .ecommercee {
-   animation:tracking-in-expand-fwd-top 3s cubic-bezier(.215,.61,.355,1.000) both;
-   display: grid;
-   margin-left: 5%;
-   margin-right: 5%;
+  animation: tracking-in-expand-fwd-top 3s cubic-bezier(.215, .61, .355, 1.000) both;
+  display: grid;
+  margin-left: 5%;
+  margin-right: 5%;
 }
+
 .generic {
-    background-image: url(img/unsplash_RnCPiXixooY.jpg);
-    display: grid; 
-    place-items: center; 
+  background-image: url(img/unsplash_RnCPiXixooY.jpg);
+  display: grid;
+  place-items: center;
 }
 
 @keyframes rotate-vert-center{0%{transform:rotateY(0)}100%{transform:rotateY(360deg)}}
