modifica header botones

--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -33,5 +33,7 @@ header {
 }
 
 .header__li:hover {
-  background-color: rgb(80, 69, 69)
+  color: black;
+  background-color: palevioletred;
+  border-radius: 30px;
 }
