--- a/css/translated.css
+++ b/css/translated.css
@@ -66,7 +66,9 @@ header {
   font-size: 20px; }
 
 .header__li:hover {
-  background-color: #504545; }
+  color: black;
+  background-color: palevioletred;
+  border-radius: 30px; }
 
 .footerPlal {
   background-image: url(img/footer.jpg); }
