--- a/css/translated.css
+++ b/css/translated.css
@@ -123,7 +123,7 @@ header {
 
 /* tarjetas*/
 .tarjetasPrincipal {
-  background-color: black;
+  background-image: url(img/footer.jpg);
   display: grid;
   place-items: center; }
 
@@ -145,6 +145,7 @@ header {
   flex-direction: inherit; }
 
 .quienesSomos {
+  background-image: url(img/footer.jpg);
   padding: 40px;
   display: grid;
   place-items: center; }
