--- a/scss/index.scss
+++ b/scss/index.scss
@@ -51,7 +51,7 @@
 /* tarjetas*/
 
 .tarjetasPrincipal {
-  background-color: black;
+  background-image: url(img/footer.jpg);
   display: grid;
   place-items: center;
 }
@@ -77,6 +77,7 @@
 }
 
 .quienesSomos {
+  background-image: url(img/footer.jpg);
   padding: 40px;
   display: grid;
   place-items: center;
